Updated GitHub Pages settings

--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "react-vertical-timeline-component": "^3.6.0",
     "styled-components": "^6.1.9",
     "typewriter-effect": "^2.21.0",
+    "homepage": "https://KarmanayGupta.github.io/K",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -47,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
