Updated GitHub Pages settings

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-vertical-timeline-component": "^3.6.0",
     "styled-components": "^6.1.9",
     "typewriter-effect": "^2.21.0",
-    "homepage": "https://KarmanayGupta.github.io/K",
+    "homepage": "https://KarmanayGupta.github.io/K/",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
